[package]
name = "kamera"
version = "0.0.2"
edition = "2021"
authors = ["Gilbert Röhrbein"]
keywords = ["camera", "webcam", "capture", "cross-platform"]
license = "MIT/Apache-2.0"
description = "Camera API with a reduced feature set for basic use cases and learning"
documentation = "https://docs.rs/kamera"
repository = "https://github.com/payload/kamera"

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { git = "https://github.com/madsmtm/objc2.git", tag = "objc-0.4.1", features = [
    "Foundation",
    "Foundation_NSArray",
    "Foundation_NSNumber",
    "Foundation_NSMutableDictionary",
] }
objc2 = { git = "https://github.com/madsmtm/objc2.git", tag = "objc-0.4.1", features = ["malloc"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_DirectShow",
    "Win32_Media",
    "Win32",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "implement",
] }

[target.'cfg(target_os="linux")'.dependencies]
v4l = "0.14"
ffimage = "0.9"
ffimage_yuv = "0.9"
mozjpeg = "0.9"

[dev-dependencies]
softbuffer = "0.3"
winit = "0.28"
iced = { version = "0.10", features = ["advanced", "image"] }

